gl33-master/src/test/deca/context/invalid/other/affectation_float_boolean.deca
// Invalid test
// Affectation d'un flottant à un boolean

{
   float x;
   boolean b;

   b = x;
   b = 1.3;
}
